# BlackboxEngine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  blackbox.cpp  blackbox.h  engine.cpp  engine.h  imgui.ini  main.cpp
demos/: dvd.h  main.cpp  particle.h  platformer.h  res_dvd.h  teapot.h
include/: tiny_gltf_loader.h
include/glad/: glad.h
legacy/: CMakeLists.txt  compute_shader.glsl  model.h  particlegl.h  referance.h  resources.h  serialization.cpp
lib/: DG.cpp  glad.c  tiny.cpp  tinyobj.cpp
res/: Shiba.mtl  Test.fbx  Test2.fbx  jam.html  shell.html
res/coral/: coral.fbx
res/fish/: fish1.fbx
src/: action.h  archive.h  camera.cpp  camera.h  color.h  debug.h  def.h  editor.cpp  editor.h  entity.cpp  entity.h  gametime.h  input.h  material.cpp  material.h  mesh.cpp  mesh.h  model.h  primitive.cpp  primitive.h  random.cpp  random.h  resources.cpp  resources.h  scene.h  serialization.cpp  serialization.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h  window.cpp  window.h
src/internal/: res_dvd.h  res_shader.h  res_teapot.h  res_uv.h
